gcc/testsuite/g++.old-deja/g++.jason/scoping16.C
// { dg-do assemble  }
struct A {
  int a();			// { dg-error "" } 
  int a;			// { dg-error "" } 
};
